# YouEdu

./: .env.example  .gitignore  API_ENDPOINTS.md  App.tsx  README.md  REGRAS_DE_NEGOCIO.md  SETUP_ENV.md  SETUP_SUPABASE.md  SETUP_SUPABASE_QUICK.md  SUPABASE_GUIDE.md  metadata.json  package-lock.json  package.json  types.ts
apps/api/: main.py  pyproject.toml  requirements.txt
apps/api/database/: README.md  __init__.py  rls_dev.sql  seeds.py  setup_rls.py  setup_schema.py  supabase_client.py
apps/api/database/migrations/: 001_enable_rls.sql  001_enable_rls_dev.sql
apps/api/routers/: assessment.py  auth.py  certificates.py  challenges.py  gamification.py  models.py  students.py  trails.py  transcription.py  youtube.py
apps/api/schemas/: assessment.py  certificate.py  challenges.py  progress.py  student.py  trails.py  youtube.py
apps/api/services/: captions_service.py  checkpoint_ai_service.py  gemini_service.py  supabase_service.py  transcription_service.py
apps/api/tests/: __init__.py  conftest.py  test_health.py  test_youtube_router.py
apps/web/: .eslintrc.cjs  App.tsx  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/components/: CertificatePreview.tsx  ChallengeOverlay.tsx  ChallengesPreview.tsx  CheckpointModal.tsx  FinalAssessmentView.tsx  FinalQuiz.tsx  GamificationPanel.tsx  TranscriptPanel.tsx  UserMenu.tsx  XPBar.tsx
apps/web/contexts/: AuthContext.tsx
apps/web/hooks/: useVideoCheckpoints.ts  useYouTubePlayer.ts
apps/web/lib/: supabaseClient.ts
apps/web/services/: apiClient.ts  geminiService.ts  (+7 more)
components/: ChallengeOverlay.tsx  XPBar.tsx
docs/: CONFIGURACAO_AUTENTICACAO.md
scripts/: dev.sh
services/: geminiService.ts
views/: Home.tsx
(+10 files in other folders)
